syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message AuthResponse {
    string email = 1;
    bool deliveryman = 2;
}