syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

import "request/auth_request.proto";
import "response/auth_response.proto";

service AuthService {
    rpc Save (AuthRequest) returns (AuthResponse);
}

